--- a/sample-app-capitals/res/layout/capitals_list_activity.xml
+++ b/sample-app-capitals/res/layout/capitals_list_activity.xml
@@ -1,5 +1,5 @@
 <!--
-	 Copyright (c) 2013, MapsWithMe GmbH All rights reserved.
+	 Copyright (c) 2022, Organic Maps OÜ. All rights reserved.
 
 	Redistribution and use in source and binary forms, with or without modification,
 	are permitted provided that the following conditions are met:
